revert cors index

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script>
-        const socket = io('https://pos-socket-3eb5c1cd5cf2.herokuapp.com');
+        const socket = io('localhost:3001');
         const sbtn = document.getElementById('sendBtn');
         const msgInput = document.getElementById('msg');
         const rtnAllMsg = document.getElementById( 'rtnMsg'); 
