FIX: added ws in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script>
-        const socket = io('localhost:3001');
+        const socket = io('http://socket.tenacioustechies.com:3001');
 
         //for emit to all shop with orderId
         const sbtn = document.getElementById('sendBtn');
